# maestro-linux

./: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.ts
docs/research/: 00-MASTER-ARCHITECTURAL-PLAN.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: git.rs  mod.rs  session.rs  terminal.rs
src-tauri/src/core/: error.rs  mod.rs  process_manager.rs  session_manager.rs  worktree_manager.rs
src-tauri/src/git/: error.rs  mod.rs  ops.rs  runner.rs
src/components/git/: GitGraphPanel.tsx
src/components/shared/: BottomBar.tsx  BranchDropdown.tsx  FloatingAddButton.tsx  IdleLandingView.tsx  PreLaunchView.tsx  ProjectTabs.tsx  StatusLegend.tsx  TopBar.tsx
src/components/sidebar/: Sidebar.tsx
src/components/terminal/: QuickActionPills.tsx  SessionPodGrid.tsx  TerminalGrid.tsx  TerminalHeader.tsx  TerminalView.tsx
src/lib/: terminal.ts  useOpenProject.ts
src/stores/: useSessionStore.ts  useWorkspaceStore.ts
src/styles/: globals.css
