[package]
name = "maestro-linux"
version = "0.1.0"
description = "Maestro — Multi-session AI orchestrator for Linux"
authors = ["lliWcWill"]
edition = "2021"

[lib]
name = "maestro_linux_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
dashmap = "6"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
